# echopile

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
echopile/: __init__.py  __main__.py  config.py  help_texts.py  translations.py  ui_components.py
echopile/app/: __init__.py  app.py  profiles.py
echopile/app/callbacks/: __init__.py  handlers.py
echopile/assets/: master_switches.css  plot_download_buttons.js  sliders.css
echopile/core/: __init__.py  io_readers.py  processing_pipeline.py  settings_defaults.py  signal_processing.py  slt_analysis.py  snc_io.py  superlet_complex.py
examples/: 0305_no-arm.sgy  A_9_kazachya.pp.CSV  README.md  Vel (Z_component) (big probe)_F_2000.snc  ZBL1.txt  signal.txt
tests/: test_refactor_regression.py  test_snc_roundtrip.py
