[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echopile"
version = "0.95.0"
description = "Dash application for pile integrity signal analysis"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  {name = "echopile contributors"},
]
dependencies = [
  "dash>=2.14",
  "dash-bootstrap-components>=1.5",
  "dash-mantine-components>=0.14",
  "dash-iconify>=0.1.2",
  "matplotlib>=3.7",
  "numpy>=1.24",
  "pandas>=2.0",
  "plotly>=5.18",
  "scipy>=1.10",
  "EMD-signal>=1.6",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
segy = [
  "fsspec>=2024.2.0",
  "segy>=0.3",
]

[project.scripts]
echopile = "echopile.__main__:main"

[tool.setuptools.packages.find]
include = ["echopile*"]

[tool.setuptools.package-data]
echopile = ["assets/*"]
